--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@
   color: #61dafb;
 }
 
+.venue_imgage {
+  width: 200px;
+  height: 200px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
