--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,63 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
+  justify-content: center;
 }
 
+/*
+  map part
+*/
 
-.App-link {
-  color: #61dafb;
+.map-container {
+  width: 75%;
+  height: 700px;
 }
 
-.controller {
-  width: 300px;
-  height: 500px;
+/*
+  controller part
+*/
+
+.controller-container {
+  width: 25%;
+  height: 700px;
   border: 1px solid gray;
-  background: gray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-container {
+  margin: 0 auto;
+  border: 1px solid gray;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-container button {
+  width: 40%;
+  height: 30%;
+}
+
+.show-list {
+  margin-right: 15px;
+}
+
+.venue-list-wrapper {
+  list-style-type: none;
+}
+
+.venue-list {
+  font-size: 0.9rem;
+  width: 90%;
+  height: 30px;
+  background: #eab9d4;
+  border: 0.5px solid gray;
+  margin-bottom: 2px;
+  vertical-align: center;
+  align-items: center;
+}
+
+.list-image {
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
 }
