--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,19 @@
   display: flex;
   justify-content: center;
 }
+/*
+ main title
+*/
+.main-title-wrapper {
+  width: 100%;
+  height: 5rem;
+  text-align: center;
+  font-size: 4rem;
+  color: #BF955A;
+  font-weight: bold;
+  background: #423A34;
+  letter-spacing: 1px;
+}
 
 /*
   map part
@@ -41,23 +54,33 @@
   margin-right: 15px;
 }
 
+.venue-list-container {
+}
+
 .venue-list-wrapper {
   list-style-type: none;
+  padding: 0;
 }
 
 .venue-list {
   font-size: 0.9rem;
-  width: 90%;
-  height: 30px;
+  width: 95%;
+  height: 40px;
   background: #eab9d4;
-  border: 0.5px solid gray;
   margin-bottom: 2px;
   vertical-align: center;
   align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 .list-image {
   border-radius: 50%;
   width: 30px;
   height: 30px;
+  margin-left: 0.7rem;
+  margin-right: 0.6rem;
 }
+
+
