--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,18 @@
   width: 100%;
   height: 5rem;
   text-align: center;
-  font-size: 4rem;
+  font-size: 3rem;
   color: #BF955A;
   font-weight: bold;
   background: #423A34;
   letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-title {
+
 }
 
 /*
@@ -55,24 +62,33 @@
 }
 
 .venue-list-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .venue-list-wrapper {
   list-style-type: none;
   padding: 0;
+
 }
 
 .venue-list {
   font-size: 0.9rem;
   width: 95%;
   height: 40px;
-  background: #eab9d4;
+  background: #BF955A;
   margin-bottom: 2px;
   vertical-align: center;
   align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+}
+
+.venue-list span {
+  color: #423A34;
+  font-weight: bold;
 }
 
 .list-image {
