--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   justify-content: center;
 }
 /*
- main title
+ Main Title
 */
 .main-title-wrapper {
   width: 100%;
@@ -20,11 +20,12 @@
 }
 
 .main-title {
-
+  width: 80%;
+  height: 3rem;
 }
 
 /*
-  map part
+  Map part
 */
 
 .map-container {
@@ -33,49 +34,39 @@
 }
 
 /*
-  controller part
+  Controller Part
 */
 
 .controller-container {
   width: 25%;
-  height: 700px;
-  border: 1px solid gray;
-}
-
-.button-container {
-  margin: 0 auto;
-  border: 1px solid gray;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.button-container button {
-  width: 40%;
-  height: 30%;
-}
-
-.show-list {
-  margin-right: 15px;
-}
-
-.venue-list-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
+  align-content: center;
+}
+
+.controller-container input {
+  width: 90%;
+  height: 50px;
+  margin-top: 1rem; 
+  font-size: 1rem;
+  padding-left: 0.7rem;
+  border: none;
+  border-bottom: 0.5px solid gray;
+  position: relative;
 }
 
 .venue-list-wrapper {
+  width: 90%;
   list-style-type: none;
   padding: 0;
-
+  display: inline-block;
 }
 
 .venue-list {
   font-size: 0.9rem;
-  width: 95%;
+  width: 100%;
   height: 40px;
   background: #BF955A;
   margin-bottom: 2px;
@@ -84,6 +75,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  cursor: pointer;
 }
 
 .venue-list span {
