--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@
 /*
   Controller Part
 */
+.input-wrapper {
+  width: 90%;
+  border-bottom: 0.5px solid gray;  
+}
 
 .controller-container {
   width: 25%;
@@ -46,12 +50,11 @@
 
 .controller-container input {
   width: 90%;
-  height: 50px;
+  height: 40px;
   margin-top: 1rem; 
   font-size: 1rem;
   padding-left: 0.7rem;
   border: none;
-  border-bottom: 0.5px solid gray;
   position: relative;
 }
 
