--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,12 @@
   justify-content: center;
 }
 
+.main-title-wrapper i {
+  display: none;
+}
+
 .main-title {
   width: 80%;
-  height: 3rem;
 }
 
 /*
@@ -62,6 +65,7 @@
   width: 90%;
   list-style-type: none;
   padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -92,6 +96,107 @@
   height: 30px;
   margin-left: 0.7rem;
   margin-right: 0.6rem;
+}
+
+@media screen and (max-width: 1150px) {
+  .main-title-wrapper {
+    font-size: 2.5rem;
+    height: 4rem;
+  }
+
+  .venue-list {
+    font-size: 0.7rem;
+    height: 35px;
+  }
+
+  .list-image {
+    width: 25px;
+    height: 25px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .main-title-wrapper {
+    font-size: 1.8em;
+    height: 3rem;
+  }
+
+  .venue-list {
+    font-size: 0.5rem;
+    height: 30px;
+  }
+
+  .list-image {
+    width: 20px;
+    height: 20px;
+  }
+
+  .input-wrapper i {
+    font-size: 0.8rem;
+  }
+
+  .controller-container input {
+    height: 30px;
+    margin-top: 1rem; 
+    font-size: 0.8rem;
+  }  
+}
+
+@media screen and (max-width: 700px) {
+  .main-title-wrapper {
+    font-size: 1.2em;
+    height: 3rem;
+  }
+
+  .main-title {
+    width: 90%;
+  }
+
+  .venue-list {
+    font-size: 0.2rem;
+    height: 25px;
+  }
+
+  .list-image {
+    width: 20px;
+    height: 20px;
+  }
+
+  .input-wrapper i {
+    font-size: 0.5rem;
+  }  
+
+  .controller-container input {
+    height: 30px;
+    margin-top: 1rem; 
+    font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 650px) {  
+  .main-title-wrapper {
+    font-size: 0.9rem;
+  }
+
+  .main-title-wrapper i {
+    display: inline;
+    cursor: pointer;
+  }
+
+  .app {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .controller-container {
+    display: none;
+    width: 100%;
+    
+  }
+
+  .map-container {
+    width: 100%;
+  }
 }
 
 
