--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 /*
  Main Title
 */
-.main-title-wrapper {
+.nav-wrapper {
   width: 100%;
   height: 5rem;
   text-align: center;
@@ -19,7 +19,7 @@
   justify-content: center;
 }
 
-.main-title-wrapper i {
+.nav-wrapper i {
   display: none;
 }
 
@@ -123,12 +123,8 @@
   color: #423A34;
 }
 
-.infowindow-wrapper p::after {
-  margin-top: 1rem;
-}
-
 @media screen and (max-width: 1150px) {
-  .main-title-wrapper {
+  .nav-wrapper {
     font-size: 2.5rem;
     height: 4rem;
   }
@@ -145,7 +141,7 @@
 }
 
 @media screen and (max-width: 950px) {
-  .main-title-wrapper {
+  .nav-wrapper {
     font-size: 1.8em;
     height: 3rem;
   }
@@ -172,7 +168,7 @@
 }
 
 @media screen and (max-width: 700px) {
-  .main-title-wrapper {
+  .nav-wrapper {
     font-size: 1.2em;
     height: 3rem;
   }
@@ -203,11 +199,11 @@
 }
 
 @media only screen and (max-width: 650px) {  
-  .main-title-wrapper {
+  .nav-wrapper {
     font-size: 0.9rem;
   }
 
-  .main-title-wrapper i {
+  .nav-wrapper i {
     display: inline;
     cursor: pointer;
   }
