--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,13 @@
   justify-content: flex-start;
 }
 
+.venue-label {
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  color: #BF955A;;
+}
+
 .venue-list {
   font-size: 0.9rem;
   width: 100%;
